# AIR-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SPEC.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  main.py  pyproject.toml
backend/src/: config.py  scheduler.py
backend/tests/: test_adaptive_rag.py  test_api_auth.py  test_api_extras.py  test_bot_build.py  test_calendar.py  test_citation_accuracy.py  test_citation_network.py  test_contextual.py  test_deep_research.py  test_eval_harness.py  test_llm_judge.py  test_lstm.py  test_multi_query_retriever.py  test_news.py  test_openalex.py  test_pagerank.py  test_personalize.py  test_ranker.py  test_reddit.py  test_relationship.py  test_reranker.py  test_tools.py  test_trends.py
config/: .env.example
data/: arxiv_20260308_0702.txt
docs/: project_tree.txt
frontend/: DESIGN.md  index.html  package-lock.json  package.json  prototype.html  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.tsx
scripts/: build_report.py  build_slides.py  md_to_docx.py  update_diff.sh  update_tree.sh
src/: config.py  config_report.py  scheduler.py
tests/: conftest.py  test_adaptive_rag.py  test_api_ask.py  test_api_extras.py  test_api_graph.py  test_api_health.py  test_api_insights.py  test_api_learning.py  test_api_library.py  test_api_notifications.py  test_api_research.py  test_arxiv_crawler.py  test_bot_build.py  test_bot_schedule.py  test_caching_embedder.py  test_chunk_citations.py  test_chunker.py  test_citation_accuracy.py  test_citation_network.py  test_concept_graph.py  test_config_report.py  test_contextual.py  test_corrective_rag.py  test_crawlers_extra.py  test_credibility.py  test_database.py  test_deep_research.py  test_eval_harness.py  test_evaluation.py  test_global_search.py  test_graph_rag.py  test_graph_viz.py  test_groq_client.py  test_key_rotator.py  test_lstm.py  test_memory.py  test_multi_agent.py  test_multi_query_retriever.py  test_notify.py  test_observability.py  (+28 more)
(+150 files in other folders)
