[project]
name = "air-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.4.1",
    "bs4>=0.0.2",
    "openai>=2.26.0",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "pytest-playwright>=0.7.2",
    "requests>=2.32.5",
]
