[project]
name = "air-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.4.1",
    "bs4>=0.0.2",
    "openai>=2.26.0",
    "playwright>=1.58.0",
    "pydantic[email]>=2.12.5",
    "pymupdf>=1.27.1",
    "pytest-playwright>=0.7.2",
    "requests>=2.32.5",
    "discord.py>=2.4.0",
    "faiss-cpu>=1.9.0",
    "sentence-transformers>=3.3.0",
    "python-dotenv>=1.0.1",
    "python-pptx>=1.0.2",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.49.0",
    "bcrypt>=5.0.0",
    "pyjwt>=2.13.0",
    "authlib>=1.7.2",
    "httpx>=0.28.1",
    "apscheduler>=3.11.3",
    "feedparser>=6.0.12",
    "psycopg[binary]>=3.3.4",
    "pgvector>=0.4.2",
]

[dependency-groups]
dev = [
    "python-docx>=1.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--import-mode=prepend"
